--- a/src/components/MainNavSubmenu/MainNavSubmenu.module.scss
+++ b/src/components/MainNavSubmenu/MainNavSubmenu.module.scss
@@ -86,7 +86,6 @@
   color: $color-black;
   text-decoration: none;
   font-weight: 500;
-  white-space: nowrap;
 
   &:nth-child(odd) {
     margin-right: 0.5rem;
